--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -176,8 +176,8 @@ showstringspaces=false
 % Caso seja necessario algum apendice, descomente a proxima linha.
 
 \appendix
-\input{sumario}
-\input{apendices}
+% \input{sumario}
+% \input{apendices}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
