--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -18,13 +18,20 @@ For all four types of contribution considered, a common pattern emerges in our r
 
 For all types of contribution, when there are differences in contribution levels, there is larger number of sites in which a typical women contributor is more active than sites in which men tend to contribute more. The difference in this number is the highest for questions ($21/62/2$), followed by answers ($18/56/11$) and all contributions combined ($10/73/2$). 
 
-Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to STEM categories. For questions, this distribution is $16/28/0$ for the STEM sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are STEM sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three STEM sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
-
 \begin{figure}
   % \centering
   \raggedleft
   \includegraphics[width=1\columnwidth]{figures/answers_women.pdf}
   \caption{Comparison of the number of answers posted by contributors of different gender in sites where a significant difference was identified and women contribute with more answers. The box represents the quartiles of the distributions, while the whiskers show the 1st and 99th percentile values. For visualizing the distributions on a log scale, the value we display is the number of contributions of each user plus one. }~\label{figure:answers}
+\end{figure}
+
+Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to STEM categories. For questions, this distribution is $16/28/0$ for the STEM sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are STEM sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three STEM sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
+
+\begin{figure}
+  % \centering
+  \raggedleft
+  \includegraphics[width=1\columnwidth]{figures/answers_men.pdf}
+  \caption{Comparison of the number of answers posted by contributors of different gender in sites where a significant difference was identified and men contribute with more questions. The box represents the quartiles of the distributions, while the whiskers show the 1st and 99th percentile values. For visualizing the distributions on a log scale, the value we display is the number of contributions of each user plus one. }~\label{figure:answers-men}
 \end{figure}
 
 These results point that women who engage with most sites we study and display their gender usually do not contribute significantly less than men. In fact, when there are differences, they are most often on the opposite direction. 
