--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -15,6 +15,8 @@ Mudando o foco para comunidades online mais relacionadas à tecnologia, foi enco
 
 Por fim, em comunidades \textit{Free Open Source} (FOSS) e na comunidade StackOverflow mulheres não são uma minoria, mas possuem uma baixa participação~\cite{rustad2011suck} e se engajam menos à comunidade~\cite{Vasilescu27092013}. Homens têm um tempo de vida maior nestas comunidades.
 
+Portanto, não podemos generalizar o comportamento de mulheres para todas as comunidades online, mesmo que elas tenham designs similares e propósitos iguais. E, como todas as comunidades podem se beneficiar de usuários mais diversos, é importante estudar o comportamento de cada uma para ser possível sugerir soluções para o problema do \textit{gender gap}.
+
 % TODO:
 % Though we can't generalize women's behavior for every online community, even if they have similar shapes or similar purposes. And, as everyone of these communities can improve as their user diversity widen, it's important to study women's behavior in each one so we can make suggestions to solve its gender gap.
 
@@ -32,11 +34,11 @@ Apesar do seu potencial, mulheres ainda são minoria em campos relacionados a ST
 
 O problema parece estar na falta de auto confiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e filosofia~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa auto confiança em tarefas de ciências comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a Wikipedia, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
 
-Por outro lado, estudos apontam que mulheres que têm contato com "role models" em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
+Mais ainda, o número baixo de mulheres em STEM parece influenciar outras mulheres a não se envolver na área: o fato de outras mulheres não escolherem um determinado campo pode ser um sinal de que ele não seja bom para mulheres no geral~\cite{shapiro2011major}. Contudo, mulheres tendem a não seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mais ainda, estudos apontam que mulheres que têm contato com modelos em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
 
 % \section{Mulheres e carreiras em STEM}
 
-Mulheres não consideram seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mas, uma baixa proporção de mulheres numa disciplina pode mandar uma mensagem negativa para mulheres, como se a disciplina não fosse interessante para as outras e que elas a deveriam evitá-la também~\cite{shapiro2011major}.
+% Mulheres não consideram seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mas, uma baixa proporção de mulheres numa disciplina pode mandar uma mensagem negativa para mulheres, como se a disciplina não fosse interessante para as outras e que elas a deveriam evitá-la também~\cite{shapiro2011major}.
 
 % Contudo, o preconceito com mulheres na área ainda é muito forte. Uma prova que tal estereótipo de que mulheres são menos competentes pode ser encontrado em ~\cite{moss2012science} onde acadêmicos de ambos os sexos não só preferem contratar homens à mulheres, como oferecem aos candidatos do sexo masculino um maior salário e melhor suporte de carreira (career mentoring). Isso se alinha com o estudo que mostra que homens consideram matemática como "coisa de homem" mais do que mulheres~\cite{hyde1990gender}.
 % TODO: verificar em qual área é a pesquisa de moss2012science e colocar aqui.
