--- a/modelo_copin/agradecimentos.tex
+++ b/modelo_copin/agradecimentos.tex
@@ -1,1 +1,4 @@
-Gostaria de agradecer à comunidade StackExchange por ser incrível e pelos dados fornecidos para esta pesquisa. Em especial, agradeço à comunidade Cross Validated e o usuário \textit{Glen\_b} que me deu suporte técnico e estatístico para variadas questões que surgiram durante esta pesquisa. 
+%!TEX root = main_mestrado.tex
+Gostaria de agradecer aos meus amigos e familiares pelo apoio emocional. À Capes pelo apoio financeiro. Ao meu orientador pela paciência e dedicação. Ao grupo de estudos de sistemas colaborativos pela amizade e valiosas discussões.
+
+Por fim, agradeço à comunidade StackExchange por ser incrível e pelos dados fornecidos para esta pesquisa. Em especial, agradeço à comunidade \textit{Cross Validated} e ao usuário \textit{Glen\_b} que me deram suporte técnico e estatístico para variadas questões que surgiram durante esta pesquisa. 
