--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -36,7 +36,7 @@ Ver que mulheres têm aumentado sua proporção de contribuições ao longo do t
 
 Overall, our results portrait most StackExchange site as having contributor communities with few behavior differences related to gender. Nevertheless, there seem to be two widespread barriers: one for entrance, given the small proportion of female contributors, and a second one related to the premature departure of engaged contributors in some sites. Both of these behaviors are more accentuated in the largest and STEM related sites, suggesting these communities have higher barriers for women. This, together with the fact that women still tend to ask more questions than men in these communities, calls for a deeper qualitative investigation why this pattern emerges.
 
-
+No geral, nossos resultados nos mostram que a maioria dos sites do StackExchange possuem comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, visto a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas estas barreiras são mais expressivas nas maiores comunidades relacionadas a STEM, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
 
 
 % Esse parágrafo é interessante, mas não acho que cabe aqui.
