--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -131,10 +131,10 @@ showstringspaces=false
 \selectlanguage{portuges}
 
 \Sumario
-\ListadeSimbolos
+% \ListadeSimbolos
 \listoffigures
 \listoftables
-\lstlistoflistings %lista de codigos fonte - Para inserir a listagem de codigos fonte
+% \lstlistoflistings %lista de codigos fonte - Para inserir a listagem de codigos fonte
 \newpage
 \cleardoublepage
 
